@@ -1,5 +1,5 @@
 /*
- *    Copyright 2015-2022 the original author or authors.
+ *    Copyright 2015-2026 the original author or authors.
  *
  *    Licensed under the Apache License, Version 2.0 (the "License");
  *    you may not use this file except in compliance with the License.
@@ -15,7 +15,6 @@
  */
 package org.mybatis.spring.boot.autoconfigure;
 
-import java.util.Collections;
 import java.util.Set;
 
 import org.mybatis.spring.SqlSessionTemplate;
@@ -34,7 +33,7 @@ class MybatisDependsOnDatabaseInitializationDetector
 
   @Override
   protected Set<Class<?>> getDependsOnDatabaseInitializationBeanTypes() {
-    return Collections.singleton(SqlSessionTemplate.class);
+    return Set.of(SqlSessionTemplate.class);
   }
 
 }
